fix overflow

--- a/src/styling/index.scss
+++ b/src/styling/index.scss
@@ -491,7 +491,7 @@ i:hover {
 
 .donateLink {
   position: relative;
-  top: 1vh;
+  top: 0vh;
 }
 
 .donateLinkImg {
@@ -499,7 +499,6 @@ i:hover {
   width: 15%;
   display:block;
   margin:auto;
-  margin-bottom: 10vw;
 }
 
 .trailImg {
